# bobicord

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitmessage  AGENTS.md  CLAUDE.md  Caddyfile  README.md  docker-compose.yml  livekit.example.yaml  logo-loader.html  package.json
.githooks/: commit-msg
.github/: CODEOWNERS
.github/workflows/: build-windows.yml  commit-policy.yml  deploy.yml
apps/native/: package-lock.json  package.json
apps/native/src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
apps/native/src-tauri/capabilities/: default.json  notif.json
apps/native/src-tauri/examples/: audio_smoke.rs  broadcast_smoke.rs  capture_encode_smoke.rs  capture_smoke.rs  encoder_smoke.rs
apps/native/src-tauri/icons/: icon.icns
apps/native/src-tauri/src/: branding.rs  diag.rs  hotkeys.rs  lib.rs
apps/native/src-tauri/src/broadcast/: audio.rs  capture.rs  encoder.rs  games.rs  icon.rs  mod.rs  peer.rs  prio.rs  relay.rs  signaling.rs  stats.rs
apps/relay/: Cargo.toml  Dockerfile
apps/relay-core/: Cargo.toml
apps/relay-core/examples/: reconnect_smoke.rs  transcode_smoke.rs
apps/relay-core/src/: fanout.rs  lib.rs  link.rs  probe.rs  relay.rs  signaling.rs  transcode.rs
apps/relay/src/: main.rs
apps/server/: Dockerfile  auth-test.js  auth.js  bootstrap-admin-test.js  bootstrap-admin.js  d6-test.js  d7-test.js  dfix-abr-test.js  dfix-budget-test.js  dfix-quality-test.js  index.js  mailer-test.js  mailer.js  package-lock.json  package.json  publish-release.js  release-notes-test.js  releaseNotes.js  runtime-revocation-test.js  runtimeRevocation.js  stats.js  tree-flap-test.js  tree-sim.js  tree.js  turnCreds.js  voice-lease-test.js  voiceLease.js  vrelay-auth-test.js  vrelayAuth.js
apps/server/dev/: native-e2e-server.js  tree-test-publisher.html  tree-test-viewer.html
apps/web/: .env.example  .env.local.example  Caddyfile  Dockerfile  index.html  notif.html  package-lock.json  package.json  vite.config.ts
apps/web/public/: manifest.json  sw.js
apps/web/src/: App.tsx  Icon.tsx  api.ts  broadcastSource.ts  chatScroll.test.mjs  chatScroll.ts  chatWallpaper.test.mjs  chatWallpaper.ts  denoise.ts  diag.ts  downloads.ts  emotes.ts  engine.ts  homeData.ts  hooks.ts  idle.ts  leveling.ts  linkify.test.mjs  linkify.ts  main.tsx  music.ts  native.ts  nativeUpdate.ts  notif-window.ts  notify.ts  notifyws.ts  presets.test.mjs  presets.ts  push.ts  settings.ts  sounds.ts  store.ts  styles.css  theme.ts  types.ts  util.ts  version.ts  volumeCurve.test.mjs  volumeCurve.ts  youtube.test.mjs  (+1 more)
apps/web/src/components/: AccountEmailGate.tsx  AdminPage.tsx  Auth.tsx  Backdrop.tsx  BroadcastModal.tsx  DownloadFab.tsx  DownloadsModal.tsx  EmoteImg.tsx  EmotePicker.tsx  ExternalLink.tsx  Leaderboard.tsx  LogoLoader.tsx  MicMeter.tsx  Modals.tsx  MusicPlayer.tsx  ProfileBanner.tsx  ReleaseHistoryModal.tsx  ServerView.tsx  StreamerWidget.tsx  Toasts.tsx  TooltipLayer.tsx  VoiceDock.tsx
apps/web/src/transport/: dropDetector.test.mjs  dropDetector.ts  livekitVideo.ts  natDetect.ts  probe.test.mjs  probe.ts  stallDetector.test.mjs  stallDetector.ts  treeVideo.ts  videoTransport.ts
coturn/: turnserver.conf
deploy/media-relay/: README.md  setup.sh
deploy/vrelay-remote/: .env.example  docker-compose.yml  turnserver.conf
docs/: Evolution-TZ.md  Roadmap-flow-стриминга.md  audio-capture-fix.md  diag-фризы-2026-07-10.md  fps-fix.md
scripts/: diag.mjs  install-git-hooks.mjs  release-notes.mjs  release-notes.test.mjs
