# vrelay — headless-агент виртуального серверного fallback-relay (Evolution-TZ Э9).
# Крутится на VPS рядом с token-сервером, ждёт vrelay-activate по control-WS и
# джойнится в деревья через relay-core (passthrough, без транскода).
[package]
name = "vrelay"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[dependencies]
relay-core = { path = "../relay-core" }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time", "net", "signal"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9"
log = "0.4"
env_logger = "0.11.11"
