[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.82"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Без этого dev-профиль (используется и в `tauri dev`) не тянет real-time
# видео-пайплайн — BGRA->NV12 конверсия кадра на O0 сама по себе даёт
# единицы-десятки мс/кадр, что душит захват до ~12fps ещё до энкодера/сети.
[profile.dev]
opt-level = 2

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
relay-core = { path = "../../relay-core" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["devtools", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_System_Com", "Win32_Media_MediaFoundation", "Win32_Media_Audio", "Win32_Media_Audio_Endpoints", "Win32_System_Threading", "Win32_System_Variant", "Win32_Devices_FunctionDiscovery", "Win32_System_Ole", "Win32_UI_Shell_PropertiesSystem", "Win32_System_Com_StructuredStorage", "Win32_Security", "Win32_System_Diagnostics_ToolHelp", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_UI_Shell", "Win32_Storage_FileSystem"] }
windows-capture = "2.0.0"
png = "0.17"
base64 = "0.22"
webrtc = "0.17.1"
bytes = "1.12.0"
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3.32"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
audiopus = "0.2.0"
audiopus_sys = { version = "0.2.2", features = ["static"] }
crossbeam-channel = "0.5.15"
windows-core = "=0.62.2"
# Реестр для позитивного аллоулиста игр (GameConfigStore\Children\MatchedExeFullPath, см. broadcast/games.rs).
# Эргономичная обёртка над windows-sys — надёжнее ручного RegOpenKeyExW/RegEnumKeyExW.
winreg = "0.55"

[dev-dependencies]
env_logger = "0.11.11"
